--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://gitlab.com/mariusz.jarocki/its2020d#readme",
   "dependencies": {
+    "mongodb": "^3.5.5",
     "node-static": "^0.7.11"
   }
 }
