--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   },
   "homepage": "https://gitlab.com/mariusz.jarocki/its2020d#readme",
   "dependencies": {
+    "cookies": "^0.8.0",
     "mongodb": "^3.5.5",
-    "node-static": "^0.7.11"
+    "node-static": "^0.7.11",
+    "uuid": "^8.0.0"
   }
 }
